# vk-ethminer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TdrLevel.reg  TdrLevelNotice.txt  setup.py  verification.txt
shaders/hlsl/: ETHash.hlsli  ETHashGenerateDataset.hlsl  ETHashMineLib.hlsli  ETHashMine_sharedMemory.hlsl  ETHashMine_waveShuffle.hlsl
src/: main.cpp
src/config/: config.h  console_color.h  helper.h
src/lib-hash/: sha3.cpp  sha3.h
src/lib-model/: node.cpp  node.h
src/miner/: vulkanminer.cpp  vulkanminer.h
src/monitor/: monitor.cpp  monitor.h
src/stratum/: stratum.cpp  stratum.h
